test/tests/WrongGenericParameterType.expected
WrongGenericParameterType.panda:4:18: error: generic parameter 1 of type 'WrongGenericParameterType' must be of type 'panda.core.Value', but found 'panda.core.Object'
1 error
